--- a/Md/0x00-虚拟机篇.md
+++ b/Md/0x00-虚拟机篇.md
@@ -1,2 +1,8 @@
 # 0x00-虚拟机篇
 
+## 下载
+
+**去[官网](https://www.vmware.com/content/vmware/vmware-published-sites/us/products/workstation-player/workstation-player-evaluation.html.html.html.html)下载，然后从网上搜索许可证激活即可。**
+
+## 安装系统
+
