--- a/Md/0x01-资源篇.md
+++ b/Md/0x01-资源篇.md
@@ -3,3 +3,13 @@
 ## 综合教程网站
 
 - [hello-ctf](https://hello-ctf.com/)
+- [Intro | Putting the "You" in CPU](https://cpu.land/)    详细科普计算机从底层到软件运行过程的机理
+- [pwn.college](https://pwn.college/)      二进制安全系统入门网站
+
+## 论坛
+
+- [0xFFFF](https://0xffff.one/)
+
+## 刷题网站
+
+[CTFtime.org ](https://ctftime.org/)
