--- a/Md/0x01-资源篇.md
+++ b/Md/0x01-资源篇.md
@@ -9,7 +9,8 @@
 ## 论坛
 
 - [0xFFFF](https://0xffff.one/)
+- [动态 - 每日安全 (sec.today)](https://sec.today/pulses/)
 
 ## 刷题网站
 
-[CTFtime.org ](https://ctftime.org/)
+- [CTFtime.org ](https://ctftime.org/)
